# kaspbot

./: __main__.py  alembic.ini  pyproject.toml
app/: __main__.py  config_loader.py
app/bot/: filters.py  keyboards.py
app/database/: __init__.py  base.py  commands.py  config.py  crud.py  models.py  queries.py
app/database/migrations/: env.py
app/database/migrations/versions/: 203ed1f48039_initial_migration.py
app/models/: __init__.py  consumption.py  order.py  telegram.py  user.py
app/s3/: __init__.py  config.py  main.py
app/telegram/: __init__.py  config.py
app/telegram/filters/callback_data/: __init__.py  consumption.py  menu.py
app/telegram/handlers/: __init__.py  consumption.py  start.py
app/telegram/keyboards/: __init__.py  consumption.py  menu.py  share_phone.py
app/telegram/middlewares/: __init__.py  auth.py  database.py
app/telegram/states/: __init__.py  add_consumption.py  registration.py
bot/infrastructure/database/commands/: __init__.py  consumption.py  document.py  user.py
bot/infrastructure/database/dao/: __init__.py  consumption.py  document.py  user.py
bot/infrastructure/database/models/: __init__.py  consumption.py  documents.py  user.py
bot/infrastructure/database/queries/: __init__.py  consumption.py  document.py  user.py
config/: config.toml
